<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BeerCollection</string>
    <string name="sign_out">Sign Out!</string>
    <string name="label_abv">ABV</string>
    <string name="label_ibu">IBU</string>
    <string name="label_srm">SRM</string>
    <string name="message_no_results">There is no result for search query:</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_my_collection">MyCollection</string>
    <string name="title_activity_search">Search for a beer</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">Cancel</string>
    <string name="message_content_cannot_loaded">Content cannot be loaded, please check your internet connection</string>
    <string name="label_last_beer">Last beer date</string>
    <string name="date_format">
        <xliff:g id="date_format">
            yyyy-MM-dd
        </xliff:g>
    </string>
    <string name="activity_title_my_collection">My Collection</string>
    <string name="label_quantity">quantity</string>
    <string name="label_total">Total </string>
    <string name="message_how_many_beers">How many beers?</string>
    <string name="message_no_itens_in_collection">You don\'t have items in collection yet</string>
    <string name="tooltip_beer_name">Name of the beer</string>
    <string name="tooltip_last_beer">Date of last beer of this label consumed</string>
    <string name="tooltip_quantity">Total number of beers of this label consumed </string>

    <plurals name="message_you_drink_more_beers">
        <item quantity="one">You have drank %d more beer!</item>
        <item quantity="other">You have drank %d more beers!</item>
    </plurals>
    <plurals name="notification_title_cache_clared">
        <item quantity="one"> %d beer was cleared from cache</item>
        <item quantity="other">%d beers was cleared from cache</item>
    </plurals>


    <string name="message_beer_was_deleted">Beer(s) was deleted!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="history_fragment">Hello History Fragment</string>
    <string name="hello_detail_fragment">Detail Fragment</string>
    <string name="label_short_style">Short Name</string>
    <string name="label_style">Style</string>
    <string name="label_style_name">Style Name</string>
    <string name="label_properties_abv">ABV</string>
    <string name="label_detail_head_beer_info">Beer Info</string>
    <string name="label_detail_beer_name">Name</string>
    <string name="label_detail_beer_description">Description</string>
    <string name="label_characteristics">Characteristics</string>
    <string name="label_style_category">Category</string>
    <string name="label_properties_ibu">IBU</string>
    <string name="label_properties_srm">SRM</string>
    <string name="label_properties_srm_color">SRM (Color)</string>
    <string name="label_properties_organic">Organic</string>
    <string name="label_serving">Serving</string>
    <string name="label_serving_temperature">Temperature</string>
    <string name="label_serving_glass">Glass</string>
    <string name="search">Search</string>
    <string name="label_search_beer_name">Beer name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_detail_brewery_name">Brewery</string>
    <string name="label_detail_brewery_website">Website</string>
    <string name="pref_title_reset_collection">Reset Collection</string>
    <string name="pref_key_reset_collection">pref_key_reset_collection</string>

    <string name="pref_summary_reset_collection">Reset all information about beers you\'ve drank.</string>
    <string name="message_confirm_reset_collection">This action will delete all information about beers you I\'ve drank. Are you sure?</string>
    <string name="message_confirm_reset_data">confirm reset all collection data</string>
    <string name="message_successful_clear_collection_data">Succefull cleared collection data</string>
    <string name="message_error_clear_collection_data">Couldn\'t empty collection</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="message_successful_signout">Successful sign out</string>
    <string name="main_notification_channel_name">Channel</string>
    <string name="layout_label_last">Last</string>
    <string name="widget_label_total">Total</string>
    <string name="title_favorite_beers">Favorite Beers</string>
    <string name="message_beer_added_collection">Beer %s added to collection!</string>

    <item type="id" name="tag_beer_name"/>
    <item type="id" name="tag_beer_id"/>


    <string name="pref_key_send_notification_when_cache_cleared_key" translatable="false">cache_send_notification</string>
    <string name="pref_key_send_notification_when_cache_cleared_label" >Send notification when cache is cleared</string>
    <string name="pref_no">No</string>
    <string name="pref_yes">Yes</string>
    <string name="message_cache_clared">Cache cleared!</string>
    <string name="icon_cmd_beer">{cmd-beer}</string>
    <string name="icon_cmd_calendar">{cmd-calendar_today}</string>
    <string name="content_toolbar_image">Toolbar Detail Image</string>
    <string name="content_srm_color">Srm Color</string>
    <string name="content_beer_label">Beer Label</string>
    <string name="content_search">Search</string>
    <string name="content_drink">Drink</string>
    <string name="content_save_beer_to_collection">Save beer to collection</string>
    <string name="content_logo">Logo</string>
    <string name="content_refresh">Refresh</string>


</resources>

