<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.alexpfx.udacity.beercollection.collection.MyCollectionActivity">
    <item android:id="@+id/search"
          android:title="@string/search"
          app:showAsAction="always"
          android:icon="@drawable/ic_search_white_24dp"
          android:orderInCategory="1"
          app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_edit"
          android:title="@string/edit"
          app:showAsAction="always"
          android:orderInCategory="2"
          android:icon="@drawable/ic_mode_edit_black_24dp"
          />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
