<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/primary"

    >


    <ImageButton
        android:id="@+id/widget_image_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/content_logo"
        android:foregroundGravity="center_vertical"
        android:src="@mipmap/ic_beer_launch"/>


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/widget_image_logo"
        android:layout_toStartOf="@id/widget_image_refresh"
        android:gravity="start|center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/title_favorite_beers"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="Favorite Beers"
        />

    <ImageButton
        android:id="@+id/widget_image_refresh"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/content_refresh"
        android:foregroundGravity="center_vertical"

        android:src="@drawable/ic_refresh_black_24dp"/>

    <ListView
        android:id="@+id/widget_list_collection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txt_title"
        android:background="@color/white"
        android:padding="8dp"

        />


</RelativeLayout>